# Sales_crm

./: Dockerfile-flask  docker-compose.yml  nginx.conf  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: .env  __init__.py  celery_app.py  celery_worker.py  config.py  database.py  extension.py  seed_data_company.py
app/models/: __init__.py  models.py
app/routes/: auth.py  massenger.py  webhook.py
app/routes/admin_dashboard/: __init__.py  admin.py  companies.py  dashboard.py  leads.py  sales_rep.py  user.py
app/routes/user_dashboard/: __init__.py  dashboard.py  lead_comments.py  leads.py  meeting.py  messages.py  notifications.py  user.py
app/services/: celery_beat_config.py  helper_function.py  lead_distribution_logic.py  massenger_services.py  meeting.py  task.py  utils.py  whatsapp_services.py
app/static/uploads/: Abdul_Basit.rtf
app/templates/admin/: admin_add_user.html  admin_dashboard.html  base_admin.html  companies.html  edit_user.html  lead_detail.html  lead_overview.html  manage_user.html  salesrep_details.html  salesrep_overview.html
app/templates/login/: login.html  reset_password.html
app/templates/meetings/: index.html
app/templates/user/: all_leads.html  base.html  base_chat.html  massenger_chat.html  user_dashboard.html  (+1 more)
app/test/: conftest.py  test_login.py  test_schedule_reminders.py  test_send_reminder.py
migrations/: env.py
migrations/versions/: 2693c35670b9_things_workings.py  77fd858ad7c3_your_change_description.py  a08e8ca87878_rebuild_migration.py  a5059f3146c7_initial_with_local_timezone.py
