[project]
name = "sales-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "eventlet>=0.39.1",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "migrate>=0.3.8",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "socketio>=0.2.1",
    "sqlalchemy>=2.0.40",
]
