[project]
name = "sales-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography",
    "celery>=5.5.2",
    "dotenv>=0.9.9",
    "eventlet>=0.39.1",
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "migrate>=0.3.8",
    "pymysql>=1.1.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "redis>=6.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "pytest>=8.4.0",
    "pytest-env>=1.1.5",
    "flask-mail>=0.10.0",
    "pip>=25.1.1",
]

[tool.pytest.ini_options]
pythonpath = "."
env = [
    "TEST_DATABASE_URL=mysql+pymysql://root:basit456@localhost/sales_crm_test"
]
markers = [
    "integration=mark test as integration"
]

